# tiny-ynn

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  dev-env.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp  bm_global_avepool.h
cmake/: clang-cxx-dev-tools.cmake  protoc.cmake  summary.cmake
cmake/Templates/: tinyynn-config.cmake.in
docker/dev-env/: Dockerfile.full
docs/: Doxyfile.in  autodoc.py  conf.py  index.rst  make.bat  readme.md
docs/developer_guides/: Adding-a-new-layer.md  Writing-Custom-Activations.md
examples/: CMakeLists.txt  main.cpp
scripts/: clang-format.sh  cpplint_test.sh
test/: CMakeLists.txt  print_device.cpp  test.cpp  test_activation_layer.h  test_average_pooling_layer.h  test_average_unpooling_layer.h  test_batch_norm_layer.h  test_caffe_converter.h  test_concat_layer.h  test_convolutional_layer.h  test_core.h  test_deconvolutional_layer.h  test_dropout_layer.h  test_fully_connected_layer.h  test_global_average_pooling_layer.h  test_gru_cell.h  test_image.h  test_integration.h  test_l2_norm_layer.h  test_large_thread_count.h  test_lrn_layer.h  test_lstm_cell.h  test_max_pooling_layer.h  test_models.h  test_network.h  test_nms.h  test_node.h  test_nodes.h  test_optimizers.h  test_power_layer.h  test_quantization.h  test_quantized_convolutional_layer.h  test_quantized_deconvolutional_layer.h  test_quantized_fully_connected_layer.h  test_rnn_cell.h  test_serialization.h  test_slice_layer.h  test_target_cost.h  test_tensor.h  test_zero_pad_layer.h  (+1 more)
tiny_ynn/: config.h  network.h  node.h  nodes.h  tiny_ynn.h
(+175 files in other folders)
